[package]
name = "quantr"
version = "0.2.4"
edition = "2021"
license = "EUPL-1.2"
readme = "README.md"
keywords = ["quantum", "computer", "simulator", "circuit", "qubit"]
categories = ["science", "simulation"]
authors = ["Andrew Barlow <a.barlow.dev@gmail.com>"]
repository = "https://github.com/a-barlow/quantr"
homepage = "https://a-barlow.github.io/quantr-book"
description = "Readily create, simulate and print quantum circuits."

[dependencies]
rand = "0.8.5"
