[package]
name = "quantr"
version = "0.6.0"
edition = "2021"
license = "EUPL-1.2"
readme = "README.md"
keywords = ["quantum", "computer", "simulator", "circuit", "qubit"]
categories = ["science", "simulation"]
authors = ["Andrew Barlow <a.barlow.dev@gmail.com>"]
repository = "https://github.com/a-barlow/quantr"
homepage = "https://a-barlow.github.io/quantr-book"
description = "Create and simulate gate-based quantum circuits."

[dependencies]
fastrand = "2.1.0"
